--- a/src/Widgets/Lights/lights.module.css
+++ b/src/Widgets/Lights/lights.module.css
@@ -1,10 +1,10 @@
-.lights {
-  position: absolute;
-  bottom: 0;
-}
-
 .lights_list {
   display: flex;
   flex-direction: column;
-  color: rgba(0, 238, 255, 0.5);
+  color: rgba(0, 238, 255);
+}
+
+.controlBlock {
+  display: flex;
+  flex-direction: row;
 }
