--- a/src/Widgets/Clock/clock.module.css
+++ b/src/Widgets/Clock/clock.module.css
@@ -1,6 +1,6 @@
 .clock {
-  height: 15vh;
-  width: 30vh;
+  height: 15%;
+  width: 25%;
   border: 2px solid rgba(0, 238, 255, 0.5);
   border-bottom-right-radius: 2vh;
   border-top-left-radius: 2vh;
