--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  padding: 1%;
   background-color: rgb(29, 24, 24);
   color: rgba(0, 238, 255);
   font-family: "Anton", sans-serif;
@@ -9,5 +10,11 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+.horizontal_flex {
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
