--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,18 @@ body {
   background-color: rgb(29, 24, 24);
   color: rgba(0, 238, 255);
   font-family: "Anton", sans-serif;
-  /*overflow: hidden;*/ /* Hide scrollbars */
+  overflow: hidden; /* Hide scrollbars */
 }
 
 .vertical_flex {
-  height: 100vh;
+  height: 95vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .horizontal_flex {
+  width: 95vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
