Redesigned the lights list

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@ body {
   color: rgba(0, 238, 255);
   font-family: "Anton", sans-serif;
   overflow: hidden; /* Hide scrollbars */
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
 }
 
 .vertical_flex {
