--- a/src/Widgets/Lights/lights.module.css
+++ b/src/Widgets/Lights/lights.module.css
@@ -1,10 +1,88 @@
-.lights_list {
-  display: flex;
-  flex-direction: column;
-  color: rgba(0, 238, 255);
+.itemContainer {
+  overflow-y: scroll;
+  height: 100%;
 }
 
-.controlBlock {
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 255, 255, 0.8);
+  border-radius: 8px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 255, 255, 0.68);
+}
+
+.lightitem {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
+  align-items: "center";
+  color: rgba(0, 255, 255, 0.8);
+  background-color: rgba(0, 255, 255, 0.02);
+}
+.darkitem {
+  display: flex;
+  justify-content: space-between;
+  align-items: "center";
+  color: rgba(0, 255, 255, 0.8);
+  background-color: rgba(0, 255, 255, 0);
+}
+
+.container {
+  background: rgba(0, 255, 255, 0.05);
+  border-radius: 5px;
+  border: 1px solid rgba(0, 255, 255, 0.6);
+  height: 30vh;
+  width: 20vw;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.deleteButton {
+  border: none;
+  background: transparent;
+  color: rgba(0, 255, 255, 0.8);
+  cursor: pointer;
+}
+
+.itemInput {
+  flex: 1;
+}
+
+.controlInput {
+  display: flex;
+  border-top: 1px solid rgba(0, 255, 255, 0.6);
+}
+
+.controlInput input {
+  background: transparent;
+  border: none;
+  color: rgba(0, 255, 255, 0.8);
+}
+
+.controlInput input:focus {
+  outline: none;
+}
+::placeholder {
+  color: rgba(0, 255, 255, 0.8);
+  font-family: "Anton", sans-serif;
+}
+.controlInput Button {
+  cursor: pointer;
+  color: rgba(0, 255, 255, 0.8);
+  background: transparent;
+  border: none;
+  padding-right: 8px;
 }
