--- a/src/Widgets/Jarvis/jarvis.module.css
+++ b/src/Widgets/Jarvis/jarvis.module.css
@@ -5,12 +5,11 @@
 
 .edge {
   border-radius: 50%;
-  border: 3px solid rgba(0, 238, 255);
+  border: 4px solid transparent;
   display: flex;
   justify-content: center;
   align-items: center;
   animation-fill-mode: forwards;
-
   animation-timing-function: cubic-bezier(0.32, 0.01, 0.67, 0.99);
 }
 @keyframes standard_rotation {
